[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Font/AtlantisInternational-jen0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/OnScreenControls/Sprites/transparentLight/transparentLight14.png" type="Texture" id=2]
[ext_resource path="res://UI/TitleAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/OnScreenControls/Sprites/transparentLight/transparentLight29.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0.498039 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = -1
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "main_menu_hide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.420441
margin_right = 0.420441
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleAnimation" parent="." instance=ExtResource( 3 )]

[node name="OptionsButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ButtonContainer" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -57.5
margin_right = 80.0
margin_bottom = -33.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="ButtonContainer"]
margin_left = 50.0
margin_right = 110.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonContainer/PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayImage" type="TextureButton" parent="ButtonContainer/PlayButton/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayLabel" type="Label" parent="ButtonContainer/PlayButton/HBoxContainer"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/main_menu_hide = SubResource( 3 )
anims/main_menu_show = SubResource( 4 )
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ButtonContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
